Ruby URI::Conponent 0.0.5 (2013-10-23)
  * ::Query.new: Support nil (not empty) query string
